==> RT-Thread/rt-thread/bsp/mm32f327x/Libraries/MM32F327x/HAL_Lib/Src/hal_gpio.c <==
#define _HAL_GPIO_C_
#include "reg_exti.h"
#include "hal_rcc.h"
#include "hal_gpio.h"

void GPIO_DeInit(GPIO_TypeDef* gpio)
{
    switch (*(vu32*)&gpio) {
        case (u32)GPIOA:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOA, DISABLE);
            break;
        case (u32)GPIOB:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOB, DISABLE);
            break;
        case (u32)GPIOC:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOC, DISABLE);
            break;
        case (u32)GPIOD:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOD, DISABLE);
            break;
        case (u32)GPIOE:
            RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOE, DISABLE);
            break;
        default:
            break;
    }
}

void GPIO_AFIODeInit()
{
    GPIOA->AFRL = 0xFFFFFFFF;
    GPIOA->AFRH = 0xF00FFFFF;       //  PA14:SWCLK, PA13:PSWDIO
    GPIOB->AFRL = 0xFFFFFFFF;
    GPIOB->AFRH = 0xFFFFFFFF;
    GPIOC->AFRL = 0xFFFFFFFF;
    GPIOC->AFRH = 0xFFFFFFFF;
    GPIOD->AFRL = 0xFFFFFFFF;
    GPIOD->AFRH = 0xFFFFFFFF;
    GPIOE->AFRL = 0xFFFFFFFF;
    GPIOE->AFRH = 0xFFFFFFFF;
}

void GPIO_Init(GPIO_TypeDef* gpio, GPIO_InitTypeDef* init_struct)
{
    u8   idx;
    u8 i;
    u32 tmp;
    __IO u32* reg ;

    // 1x
    u32 dat = init_struct->GPIO_Mode & 0x0F;
    if (init_struct->GPIO_Mode & 0x10)
        dat |= init_struct->GPIO_Speed;

    // 0x
    reg  = &gpio->CRL;
    for (i = 0; i < 8; i++) {
        idx = i * 4;
        if ((init_struct->GPIO_Pin) & (1 << i)) {
            *reg  = (*reg  & ~(0xF << idx)) | (dat << idx);
        }
    }

    reg     = &gpio->CRH;
    tmp = init_struct->GPIO_Pin >> 8;
    for (i = 0; i < 8; i++) {
        idx = i * 4;
        if (tmp & (1 << i)) {
            *reg  = (*reg  & ~(0xF << idx)) | (dat << idx);
        }
    }

    // 2x,4x
    if (init_struct->GPIO_Mode == GPIO_Mode_IPD)
        gpio->BRR |= init_struct->GPIO_Pin;
    else if (init_struct->GPIO_Mode == GPIO_Mode_IPU)
        gpio->BSRR |= init_struct->GPIO_Pin;
}

void GPIO_StructInit(GPIO_InitTypeDef* init_struct)
{
    // Reset GPIO init structure parameters values
    init_struct->GPIO_Pin  = GPIO_Pin_All;
    init_struct->GPIO_Speed = GPIO_Speed_2MHz;
    init_struct->GPIO_Mode = GPIO_Mode_FLOATING;
}
